--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  padding: 0rem;
+  max-width: 1580px;
+  min-width: none;
+}
+
+div.accordion-body {
+  padding: unset;
+}
+
+
+.accordion {
+  --bs-accordion-btn-bg: aliceblue !important;
+}
+
+.accordion-button {
+  font-weight: 500;
+}
+
+.logo-img {
+  width: 28px;
+  height: 28px;
+  object-fit: contain;
+}
+
+.jsonHighlighter {
+  max-height: 550px;
+  overflow-y: auto;
+  margin: 0.5rem;
+}
